--- a/airflow-data-migration/docker-compose.yml
+++ b/airflow-data-migration/docker-compose.yml
@@ -105,13 +105,44 @@ services:
     networks:
       - etl_network 
 
+  # MinIO Object Storage
+  # minio:
+  #   image: minio/minio:latest 
+  #   container_name: minio 
+  #   ports:
+  #     - "9001:9001"
+  #     - "9000:9000"
+  #   command: ["server", "/data", "--console-address", ":9001"]
+  #   volumes:
+  #     - minio_data:/data 
+  #   environment:
+  #     MINIO_ROOT_USER: minioadmin 
+  #     MINIO_ROOT_PASSWORD: minioadmin123
+  #   networks:
+  #     - etl_network
+
+  # # MinIO Client for initial setup 
+  # minio-client:
+  #   image: minio/mc:latest
+  #   container_name: minio-client 
+  #   depends_on:
+  #     - minio
+  #   entrypoint: >
+  #     /bin/sh -c " until (/usr/bin/mc config host add minio
+  #     http://minio:9000 minioadmin minioadmin123) do echo '...waiting...' && sleep 1;
+  #     done; /usr/bin/mc mb minio/warehouse; /usr/bin/mc policy set public
+  #     minio/warehouse; exit 0; "
+  #   networks:
+  #     - etl_network
+
 volumes:
   cassandra_db_test: 
   postgres_db: 
   airflow_logs:
   airflow_plugins:
   airflow_config:
-
+  # minio_data: 
+ 
 networks:
   etl_network:
     driver: bridge 
