--- a/airflow-data-migration/docker-compose.yml
+++ b/airflow-data-migration/docker-compose.yml
@@ -1,20 +1,18 @@
 x-airflow-common: &airflow-common
   build: .
   environment: &airflow-common-env
-    AIRFLOW__CORE__EXECUTOR: LocalExecutor
+    AIRFLOW__CORE__EXECUTOR: LocalExecutor # single-node 
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CORE__LOAD_EXAMPLES: "false"
     AIRFLOW_SCHEDULER_ENABLE_HEALTH_CHECK: "true"
   volumes:
-    - ${AIRFLOW_PROJ_DIR-.}/dags:/opt/airflow/dags
-    - ${AIRFLOW_PROJ_DIR-.}/logs:/opt/airflow/logs
-    - ${AIRFLOW_PROJ_DIR-.}/plugins:/opt/airflow/plugins
+    - ./${AIRFLOW_PROJ_DIR-.}/dags:/opt/airflow/dags
+    - ./${AIRFLOW_PROJ_DIR-.}/logs:/opt/airflow/logs
+    - ./${AIRFLOW_PROJ_DIR-.}/plugins:/opt/airflow/plugins
   user: "${AIRFLOW_UID:-50000}:0"
-  depends_on:
+  depends_on: &airflow-common-depends-on
     postgres:
       condition: service_healthy
-    airflow-init:
-      condition: service_completed_successfully
   networks:
     - etl_network
 
@@ -28,7 +26,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - ${AIRFLOW_PROJ_DIR-.}/postgres_metadata_db:/var/lib/postgresql/data
+      - ./${AIRFLOW_PROJ_DIR-.}/postgres_metadata_db:/var/lib/postgresql/data
     networks:
       - etl_network
 
@@ -49,7 +47,7 @@ services:
     command:
       - -c
       - |
-        exec /entrypoint airflow db init && \
+        exec /entrypoint airflow db migrate && \
         exec /entrypoint airflow users create \
           --username ${_AIRFLOW_WWW_USER_USERNAME:-airflow} \
           --password ${_AIRFLOW_WWW_USER_PASSWORD:-airflow} \
@@ -62,6 +60,10 @@ services:
     <<: *airflow-common
     container_name: airflow-webserver
     command: webserver
+    depends_on:
+      <<: *airflow-common-depends-on
+      airflow-init:
+        condition: service_completed_successfully
     ports:
       - "8080:8080"
     healthcheck:
@@ -76,6 +78,10 @@ services:
     <<: *airflow-common
     container_name: airflow-scheduler
     command: scheduler
+    depends_on:
+      <<: *airflow-common-depends-on
+      airflow-init:
+        condition: service_completed_successfully
     healthcheck:
       test:
         [
@@ -101,18 +107,19 @@ services:
     networks:
       - etl_network
 
-  # Oracle Database Free 23c 
   oracle-db:
-    image: container-register.oracle.com/database/free:23.3.0.0
+    image: gvenzl/oracle-free:latest
     container_name: oracle-db
-    ports: 
+    ports:
       - "1521:1521" # Oracle listener (connect db)
     environment:
       ORACLE_PASSWORD: ${ORACLE_PASSWORD}
+      ORACLE_DATABASE: ${ORACLE_DATABASE}
+      ORACLE_USERNAME: ${ORACLE_USERNAME} 
     volumes:
-      - oracle_data:/opt/oracle/oradata 
+      - oracle_data:/opt/oracle/oradata
     healthcheck:
-      test: ["CMD-SHELL", "pgrep", "tnslsnr"] 
+      test: ["CMD-SHELL", "pgrep", "tnslsnr"]
       interval: 30s
       timeout: 10s
       retries: 5
