--- a/airflow-data-migration/docker-compose.yml
+++ b/airflow-data-migration/docker-compose.yml
@@ -1,18 +1,27 @@
+# Setup following Airflow document: https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html
+
 x-airflow-common: &airflow-common
-  build: .
-  environment: &airflow-common-env
-    AIRFLOW__CORE__EXECUTOR: LocalExecutor # single-node 
-    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-    AIRFLOW__CORE__LOAD_EXAMPLES: "false"
-    AIRFLOW_SCHEDULER_ENABLE_HEALTH_CHECK: "true"
-  volumes:
-    - ./${AIRFLOW_PROJ_DIR-.}/dags:/opt/airflow/dags
-    - ./${AIRFLOW_PROJ_DIR-.}/logs:/opt/airflow/logs
-    - ./${AIRFLOW_PROJ_DIR-.}/plugins:/opt/airflow/plugins
+  build: . 
+  environment: 
+    &airflow-common-env
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor # single-node
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
+      AIRFLOW__CORE__LOAD_EXAMPLES: "false"
+      AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: "true"
+      AIRFLOW__CORE__AUTH_MANAGER: airflow.providers.fab.auth_manager.fab_auth_manager.FabAuthManager 
+      AIRFLOW__CORE__EXECUTION_API_SERVER_URL: 'http://airflow-apiserver:8080/execution/'
+      AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg' 
+  volumes: 
+    &airflow-common-volumes
+      - ./${AIRFLOW_PROJ_DIR-.}/dags:/opt/airflow/dags
+      - ./${AIRFLOW_PROJ_DIR-.}/logs:/opt/airflow/logs
+      - ./${AIRFLOW_PROJ_DIR-.}/plugins:/opt/airflow/plugins
+      - ./${AIRFLOW_PROJ_DIR-.}/scripts:/opt/airflow/scripts
   user: "${AIRFLOW_UID:-50000}:0"
-  depends_on: &airflow-common-depends-on
-    postgres:
-      condition: service_healthy
+  depends_on: 
+    &airflow-common-depends-on
+      postgres:
+        condition: service_healthy
   networks:
     - etl_network
 
@@ -47,19 +56,92 @@ services:
     command:
       - -c
       - |
-        exec /entrypoint airflow db migrate && \
-        exec /entrypoint airflow users create \
-          --username ${_AIRFLOW_WWW_USER_USERNAME:-airflow} \
-          --password ${_AIRFLOW_WWW_USER_PASSWORD:-airflow} \
-          --firstname ${_AIRFLOW_WWW_USER_FIRSTNAME:-Airflow} \
-          --lastname ${_AIRFLOW_WWW_USER_LASTNAME:-User} \
-          --role Admin \
-          --email ${_AIRFLOW_WWW_USER_EMAIL:-airflow@example.com}
-
-  airflow-webserver: # web UI
+        if [[ -z "${AIRFLOW_UID}" ]]; then
+          echo
+          echo -e "\033[1;33mWARNING!!!: AIRFLOW_UID not set!\e[0m"
+          echo "If you are on Linux, you SHOULD follow the instructions below to set "
+          echo "AIRFLOW_UID environment variable, otherwise files will be owned by root."
+          echo "For other operating systems you can get rid of the warning with manually created .env file:"
+          echo "    See: https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#setting-the-right-airflow-user"
+          echo
+          export AIRFLOW_UID=$$(id -u)
+        fi
+        one_meg=1048576
+        mem_available=$$(($$(getconf _PHYS_PAGES) * $$(getconf PAGE_SIZE) / one_meg))
+        cpus_available=$$(grep -cE 'cpu[0-9]+' /proc/stat)
+        disk_available=$$(df / | tail -1 | awk '{print $$4}')
+        warning_resources="false"
+        if (( mem_available < 4000 )) ; then
+          echo
+          echo -e "\033[1;33mWARNING!!!: Not enough memory available for Docker.\e[0m"
+          echo "At least 4GB of memory required. You have $$(numfmt --to iec $$((mem_available * one_meg)))"
+          echo
+          warning_resources="true"
+        fi
+        if (( cpus_available < 2 )); then
+          echo
+          echo -e "\033[1;33mWARNING!!!: Not enough CPUS available for Docker.\e[0m"
+          echo "At least 2 CPUs recommended. You have $${cpus_available}"
+          echo
+          warning_resources="true"
+        fi
+        if (( disk_available < one_meg * 10 )); then
+          echo
+          echo -e "\033[1;33mWARNING!!!: Not enough Disk space available for Docker.\e[0m"
+          echo "At least 10 GBs recommended. You have $$(numfmt --to iec $$((disk_available * 1024 )))"
+          echo
+          warning_resources="true"
+        fi
+        if [[ $${warning_resources} == "true" ]]; then
+          echo
+          echo -e "\033[1;33mWARNING!!!: You have not enough resources to run Airflow (see above)!\e[0m"
+          echo "Please follow the instructions to increase amount of resources available:"
+          echo "   https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#before-you-begin"
+          echo
+        fi
+        echo
+        echo "Creating missing opt dirs if missing:"
+        echo
+        mkdir -v -p /opt/airflow/{logs,dags,plugins,config}
+        echo
+        echo "Airflow version:"
+        /entrypoint airflow version
+        echo
+        echo "Files in shared volumes:"
+        echo
+        ls -la /opt/airflow/{logs,dags,plugins,config}
+        echo
+        echo "Running airflow config list to create default config file if missing."
+        echo
+        /entrypoint airflow config list >/dev/null
+        echo
+        echo "Files in shared volumes:"
+        echo
+        ls -la /opt/airflow/{logs,dags,plugins,config}
+        echo
+        echo "Change ownership of files in /opt/airflow to ${AIRFLOW_UID}:0"
+        echo
+        chown -R "${AIRFLOW_UID}:0" /opt/airflow/
+        echo
+        echo "Change ownership of files in shared volumes to ${AIRFLOW_UID}:0"
+        echo
+        chown -v -R "${AIRFLOW_UID}:0" /opt/airflow/{logs,dags,plugins,config}
+        echo
+        echo "Files in shared volumes:"
+        echo
+        ls -la /opt/airflow/{logs,dags,plugins,config}
+    environment:
+      <<: *airflow-common-env
+      _AIRFLOW_DB_MIGRATE: 'true'
+      _AIRFLOW_WWW_USER_CREATE: 'true'
+      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
+      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
+      _PIP_ADDITIONAL_REQUIREMENTS: ''
+  
+  airflow-apiserver: # web UI
     <<: *airflow-common
     container_name: airflow-webserver
-    command: webserver
+    command: api-server 
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -67,30 +149,24 @@ services:
     ports:
       - "8080:8080"
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/api/v2/version"]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 30s
-    restart: always
+    restart: always 
 
   airflow-scheduler: # core component that schedules and triggers DAG runs
     <<: *airflow-common
     container_name: airflow-scheduler
     command: scheduler
-    depends_on:
-      <<: *airflow-common-depends-on
-      airflow-init:
-        condition: service_completed_successfully
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "airflow jobs check --job-type SchedulerJob --hostname $(hostname)",
-        ]
+      test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
       interval: 30s
       timeout: 10s
       retries: 5
+      start_period: 30s
+    restart: always 
 
   cassandra:
     image: cassandra:4.1
@@ -115,7 +191,7 @@ services:
     environment:
       ORACLE_PASSWORD: ${ORACLE_PASSWORD}
       ORACLE_DATABASE: ${ORACLE_DATABASE}
-      ORACLE_USERNAME: ${ORACLE_USERNAME} 
+      ORACLE_USERNAME: ${ORACLE_USERNAME}
     volumes:
       - oracle_data:/opt/oracle/oradata
     healthcheck:
