Adding Oracle and Cassandra connections to Airflow apiserver service's environment. Implementing multi Cassandra nodes for later replication testing

--- a/airflow-data-migration/.vscode/settings.json
+++ b/airflow-data-migration/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-	"python.analysis.extraPaths": ["./scripts"]
+	"python.analysis.extraPaths": ["./scripts"],
+	"python-envs.defaultEnvManager": "ms-python.python:system",
+	"python-envs.pythonProjects": []
 }
