--- a/airflow-data-migration/docker-compose.yml
+++ b/airflow-data-migration/docker-compose.yml
@@ -152,8 +152,10 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-      cassandra_data_1: 
+      cassandra-node1: 
+        condition: service_started
       oracle-db: 
+        condition: service_healthy
     ports:
       - "8080:8080"
     healthcheck:
@@ -176,18 +178,31 @@ services:
       start_period: 30s
     restart: always 
 
+  cassandra-init:
+    image: cassandra:4.1 
+    container_name: cassandra-init 
+    depends_on:
+      - cassandra-node1 
+    restart: "no"
+    volumes: 
+      - ./sql/cassandra_schema.cql:/init.cql 
+      - ./sql/cassandra_init.sh:/init.sh 
+    entrypoint: ["/bin/sh", "/init.sh"] 
+    networks:
+      - etl_network
+  
   cassandra-node1:
     image: cassandra:4.1
     container_name: cassandra-node1
     hostname: cassandra-node1 # allow Cassandra nodes to gossip and replicate 
     ports:
-      - "9042:9042"
+      - "9045:9042"
     environment:
       CASSANDRA_CLUSTER_NAME: "BTL2_cluster_2"
       CASSANDRA_DC: "DC1"
       CASSANDRA_RACK: "rack1"
       CASSANDRA_ENDPOINT_SNITCH: "GossipingPropertyFileSnitch"
-    
+      
     volumes:
       - cassandra_data_1:/var/lib/cassandra
     networks:
@@ -198,7 +213,7 @@ services:
     container_name: cassandra-node2
     hostname: cassandra-node2 
     ports:
-      - "9042:9042"
+      - "9043:9042"
     environment:
       CASSANDRA_CLUSTER_NAME: "BTL2_cluster_2"
       CASSANDRA_DC: "DC1"
@@ -217,7 +232,7 @@ services:
     container_name: cassandra-node3
     hostname: cassandra-node3 
     ports:
-      - "9042:9042"
+      - "9044:9042"
     environment:
       CASSANDRA_CLUSTER_NAME: "BTL2_cluster_2"
       CASSANDRA_DC: "DC1"
