--- a/airflow-data-migration/docker-compose.yml
+++ b/airflow-data-migration/docker-compose.yml
@@ -10,13 +10,21 @@ x-airflow-common: &airflow-common
       AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: "true"
       AIRFLOW__CORE__AUTH_MANAGER: airflow.providers.fab.auth_manager.fab_auth_manager.FabAuthManager 
       AIRFLOW__CORE__EXECUTION_API_SERVER_URL: 'http://airflow-apiserver:8080/execution/'
+      # prevent Aiflow generates a new random Fernet key everytime Containers restart
+      # 32-byte URL-safe base64-encoded key 
+      # python3 -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+      AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW_FERNET_KEY}
       AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg' 
-  volumes: 
+  volumes:  
     &airflow-common-volumes
       - ./${AIRFLOW_PROJ_DIR-.}/dags:/opt/airflow/dags
       - ./${AIRFLOW_PROJ_DIR-.}/logs:/opt/airflow/logs
       - ./${AIRFLOW_PROJ_DIR-.}/plugins:/opt/airflow/plugins
       - ./${AIRFLOW_PROJ_DIR-.}/scripts:/opt/airflow/scripts
+
+      # for integration tests 
+      - ./tests:/opt/airflow/tests
+      - ./etl_data_migration:/opt/airflow/etl_data_migration
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on: 
     &airflow-common-depends-on
@@ -140,7 +148,7 @@ services:
   airflow-apiserver: # web UI
     <<: *airflow-common
     container_name: airflow-webserver
-    command: api-server 
+    command: api-server
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -264,7 +272,9 @@ services:
           memory: 4G 
         # min resources
         reservations: 
-          memory: 2G 
+          memory: 2G
+    networks:
+      - etl_network 
 
 volumes:
   postgres_data:
